Jeu_de_tests/error/print_1.tpc
int main(void){
    int i;
    print(*i);
    return 1;
}
